# klados

./: Cargo.toml  Makefile  README.md  docker_setup.sh  must_link_pricing_handoff.md
.github/workflows/: ci.yml  release.yml
crates/klados-core/: Cargo.toml
crates/klados-core/benches/: iai_benchmark.rs  tree_ops.rs
crates/klados-core/src/: af_validator.rs  brute_maf.rs  cluster_decomposition.rs  cluster_reduction.rs  forest.rs  instance.rs  instance_list.rs  kernelize.rs  lib.rs  solve_pipeline.rs  tree.rs  xforest.rs
crates/klados-core/src/kernelize/: chain.rs  chain32.rs  cherry.rs  cherry_rotation.rs  expansion.rs  helpers.rs  instance_ops.rs  mod.rs  rule.rs  short_chain.rs  stats.rs  tests.rs
crates/klados-core/src/lower_bound/: cherry.rs  feasibility.rs  mod.rs  partition.rs  red_blue.rs  tests.rs  tree_data.rs  triple_pack.rs
crates/klados-core/src/twin_tree/: approx2.rs  forest.rs  mod.rs  undo.rs  zobrist.rs
crates/klados-exact/: Cargo.toml
crates/klados-exact/src/: chen_rspr.rs  cluster_reduction.rs  fpt.rs  kernelize.rs  lib.rs  lower_bound.rs  maf_branch_price.rs  maf_branch_price_multi.rs  maf_ilp.rs  maf_sat.rs  overlay_exchange.rs  root_corridor.rs  root_pool.rs  shi_mestel.rs  whidden_cluster.rs
crates/klados-exact/src/bp/: mod.rs  solver.rs
crates/klados-exact/src/bp/column/: coverage.rs  mod.rs
crates/klados-exact/src/bp/pricer/: anchor_cache.rs  anchor_extend.rs  column_aggregation.rs  composite.rs  exact_pair_dp.rs  ilp.rs  leaf_pair_dp.rs  maf_pricer.rs  mod.rs  multi_pair_dp.rs  pair_dp.rs  pair_dp_filter.rs  scratch.rs  small_component.rs
crates/klados-exact/src/bp/rmp/: bounds.rs  mod.rs
crates/klados-exact/src/bp/search/: branchings.rs  selection.rs  state.rs  telemetry.rs
crates/klados-exact/src/corridor/: lazy_kbest.rs  legacy_anchor_best.rs  mod.rs  topk_m2.rs
crates/klados-exact/src/lower_bound/: cherry.rs  feasibility.rs  mod.rs  partition.rs  red_blue.rs  tests.rs  tree_data.rs
crates/klados-exact/src/shi_mestel/: algorithm.rs  branching.rs  decomposition.rs  extraction.rs  forest_nav.rs  mod.rs  preprocessing.rs  reduction.rs  search_state.rs  split.rs  tests.rs  transposition.rs  utils.rs
crates/klados-exact/src/whidden/: algorithm.rs  approx2.rs  forest.rs  mod.rs  search_state.rs  stats.rs  undo.rs
crates/klados-exact/tests/: chen_pair_agreement_property.rs  decomposition_property.rs
crates/klados-heuristic/: Cargo.toml
crates/klados-heuristic/examples/: gap_experiment.rs
crates/klados-heuristic/src/: agglomerative.rs  dive_bp.rs  lagrangian.rs  lib.rs  partition.rs
crates/klados-heuristic/src/max_sat/: max_sat_problem.rs  mod.rs
crates/klados-solve/: Cargo.toml
crates/klados-solve/examples/: decomp_probe.rs  gap_experiment.rs
crates/klados-solve/src/: catalog.rs  config.rs  lib.rs  run.rs
crates/klados-solve/src/decomp/: mod.rs  whidden_cluster.rs
crates/klados-solve/src/solvers/: agglomerative.rs  chen_rspr.rs  collapse.rs  dispatch.rs  fpt_maf.rs  lagrangian.rs  lower.rs  maf_branch_price_multi.rs  maf_ilp.rs  maf_sat.rs  merge_bb.rs  mod.rs  ncpack.rs  overlay_exchange.rs  partition.rs  root_corridor.rs  root_pool.rs
crates/klados-solve/src/solvers/bp/: mod.rs  solver.rs
crates/klados-solve/src/solvers/bp/column/: coverage.rs  mod.rs  set.rs
crates/klados-solve/src/solvers/bp/pricer/: anchor_cache.rs  exact_pair_dp.rs  leaf_pair_dp.rs  maf_pricer.rs  mod.rs  scratch.rs
crates/klados-solve/src/solvers/bp/rmp/: bounds.rs  mod.rs
crates/klados-solve/src/solvers/bp/search/: branchings.rs  mod.rs  selection.rs  state.rs  telemetry.rs
crates/klados-solve/src/solvers/corridor/: lazy_kbest.rs  legacy_anchor_best.rs  mod.rs  topk_m2.rs
crates/klados-solve/src/solvers/max_sat/: max_sat_problem.rs  mod.rs
crates/klados-solve/src/solvers/whidden/: algorithm.rs  mod.rs  stats.rs
crates/klados-solve/tests/: chen_pair_agreement_property.rs  decomposition_property.rs  dpc_brute.rs
src/: lib.rs  lower.rs  main.rs  solver.rs
src/commands/: analyze.rs  bounds.rs  bounds_detail.rs  candidate_packing.rs  check.rs  cluster_analyze.rs  compare.rs  compare_heur_approx.rs  compare_lb.rs  component_scan.rs  delete_leaf.rs  exact.rs  heuristic.rs  kernelize.rs  kernelize_diag.rs  mod.rs  validate.rs  whidden_stats.rs
