[package]
name = "klados"
version = "0.1.0"
edition = "2024"
description = "PACE 2026 Maximum Agreement Forest solver"
license = "GPL-3.0-or-later"

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
# Internal crates
klados-core = { path = "crates/klados-core" }
klados-exact = { path = "crates/klados-exact" }

# I/O
pace26io = "0.2"

# Data structures
fixedbitset = "0.5"
smallvec = "1.13"
fxhash = "0.2"

# Error handling
thiserror = "2.0"

# CLI (for main binary)
clap = { version = "4.5", features = ["derive"] }

[dependencies]
klados-core = { workspace = true }
klados-exact = { workspace = true }
pace26io = { workspace = true }
clap = { workspace = true }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.dev]
opt-level = 1

[dev-dependencies]
atree = "0.5.2"
