[package]
name = "klados"
version = "0.1.0"
edition = "2024"
description = "PACE 2026 Maximum Agreement Forest solver"
license = "GPL-3.0-or-later"

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
# Internal crates
klados-core = { path = "crates/klados-core" }
klados-exact = { path = "crates/klados-exact" }
klados-heuristic = { path = "crates/klados-heuristic" }

# I/O
pace26io = "0.2"

# Data structures
fixedbitset = "0.5"
fxhash = "0.2"

# LP/ILP solver
highs = "2.0"
highs-sys = "1.12"

# SAT solver
rustsat = "0.7"
rustsat-cadical = "0.7"

# CLI (for main binary)
clap = { version = "4.5", features = ["derive"] }

[dependencies]
klados-core = { workspace = true }
klados-exact = { workspace = true }
klados-heuristic = { workspace = true }
pace26io = { workspace = true }
clap = { workspace = true }
fixedbitset = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.4.3"
indicatif = "0.18.4"
highs = { workspace = true }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.dev]
opt-level = 1
