[package]
name = "klados"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "PACE 2026 Maximum Agreement Forest solver"

[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
publish = false

[workspace.dependencies]
# Internal crates
klados-core = { path = "crates/klados-core" }
klados-solve = { path = "crates/klados-solve" }

# I/O
pace26io = "0.2"

# Data structures
fixedbitset = "0.5"
fxhash = "0.2"

# Logging
log = "0.4"
env_logger = "0.11"

# LP/ILP solver
highs = "2"
highs-sys = "1"

# SAT solver
rustsat = "0.7"
rustsat-cadical = "0.7"

# Runtime
signal-hook = "0.4"
libc = "0.2"

# Serialization
serde_json = "1"

# CLI (for main binary)
clap = { version = "4.5", features = ["derive"] }

# Dev / benchmarks
criterion = "0.8"
iai-callgrind = "0.16"

[dependencies]
klados-core = { workspace = true }
klados-solve = { workspace = true }
pace26io = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
fixedbitset = { workspace = true }
serde_json = { workspace = true }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.dev]
opt-level = 1
