[package]
name = "klados-core"
version = "0.1.0"
edition = "2024"
description = "Core data structures for klados MAF solver"
license = "GPL-3.0-or-later"

[dependencies]
pace26io = { workspace = true }
fixedbitset = { workspace = true }
fxhash = { workspace = true }
clap = { workspace = true }
log = "0.4"

[dev-dependencies]
iai-callgrind = "0.16"
criterion = "0.8.2"

[[bench]]
name = "tree_ops"
harness = false

[[bench]]
name = "iai_benchmark"
harness = false
