[package]
name = "klados-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Core data structures for klados MAF solver"

[dependencies]
pace26io = { workspace = true }
fixedbitset = { workspace = true }
fxhash = { workspace = true }
clap = { workspace = true }
log = { workspace = true }

[dev-dependencies]
iai-callgrind = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "tree_ops"
harness = false

[[bench]]
name = "iai_benchmark"
harness = false
