[package]
name = "klados-exact"
version = "0.1.0"
edition = "2024"
description = "Exact FPT solver for klados MAF solver"
license = "GPL-3.0-or-later"

[dependencies]
klados-core = { workspace = true }
thiserror = { workspace = true }
fixedbitset = { workspace = true }
fxhash = { workspace = true }
highs = { workspace = true }
