[package]
name = "klados-exact"
version = "0.1.0"
edition = "2024"
description = "Exact FPT solver for klados MAF solver"
license = "GPL-3.0-or-later"

[dependencies]
log = "0.4"
klados-core = { workspace = true }
fixedbitset = { workspace = true }
fxhash = { workspace = true }
highs = { workspace = true }
highs-sys = { workspace = true }
rustsat = { workspace = true }
rustsat-cadical = { workspace = true }

[features]
early-termination = []
