[package]
name = "klados-solve"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Exact and heuristic solvers for the klados MAF solver"

[dependencies]
klados-core = { workspace = true }
pace26io = { workspace = true }
fixedbitset = { workspace = true }
fxhash = { workspace = true }
highs = { workspace = true }
highs-sys = { workspace = true }
rustsat = { workspace = true }
rustsat-cadical = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
signal-hook = { workspace = true }
libc = { workspace = true }
